--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
   <script src="https://kit.fontawesome.com/92b8192c54.js"></script>
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/6.6.1/firebase-app.js"></script>
+<!-- <script src="https://__/firebasejs/6.6.1/firebase-app.js"></script> -->
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#reserved-urls -->
 
 <!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+<!-- <script src="/./firebase/init.js"></script> -->
 </body>
 </html>
