--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-   
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
